Fix horizontal scroll on code examples

--- a/_includes/critical.scss
+++ b/_includes/critical.scss
@@ -8,7 +8,6 @@
 }
 
 $left-margin: 4ch;
-$line-height: 1.8rem;
 
 @media (min-width: 0) and (max-width: 719px) {
   body {
@@ -106,7 +105,7 @@ figure {
     background: $base03;
 
     pre {
-      margin-left: $left-margin;
+      padding-left: $left-margin;
       overflow: scroll;
     }
   }
